--- a/src/app/components/pages/admin/admin-pedidos/admin-pedidos.component.html
+++ b/src/app/components/pages/admin/admin-pedidos/admin-pedidos.component.html
@@ -73,7 +73,13 @@
   </ng-container>
 </div>
 <app-modal *ngIf="selectedPedido" [title]="'Voucher Pedido #' + (selectedPedido!.Id || selectedPedido!.id)" (close)="cerrarModal()">
-  <img *ngIf="voucherImg" [src]="voucherImg" alt="Voucher" />
+  <ng-container *ngIf="voucherUrl">
+    <img *ngIf="!voucherUrl.endsWith('.pdf')" [src]="voucherUrl" alt="Voucher" />
+    <iframe *ngIf="voucherUrl.endsWith('.pdf')" [src]="voucherUrl" width="100%" height="500px"></iframe>
+    <div class="descargar">
+      <button class="btn btn-primary" (click)="descargarVoucher()">Descargar</button>
+    </div>
+  </ng-container>
   <div modal-footer>
     <button class="btn btn-success" (click)="validarPago()" [disabled]="processing">Validar Pago</button>
     <button class="btn btn-danger" (click)="rechazarPago()" [disabled]="processing">Rechazar Pago</button>
