--- a/src/app/components/pages/admin/admin-pedidos/admin-pedidos.component.html
+++ b/src/app/components/pages/admin/admin-pedidos/admin-pedidos.component.html
@@ -75,8 +75,8 @@
 <app-modal *ngIf="selectedPedido" [title]="'Voucher Pedido #' + (selectedPedido!.Id || selectedPedido!.id)" (close)="cerrarModal()">
   <img *ngIf="voucherImg" [src]="voucherImg" alt="Voucher" />
   <div modal-footer>
-    <button class="btn btn-success" (click)="validarPago()" [disabled]="processing">Validar Pago</button>
-    <button class="btn btn-danger" (click)="rechazarPago()" [disabled]="processing">Rechazar Pago</button>
+    <button class="btn btn-primary" (click)="validarPago()" [disabled]="processing">Validar Pago</button>
+    <button class="btn btn-warn" (click)="rechazarPago()" [disabled]="processing">Rechazar Pago</button>
   </div>
 </app-modal>
 <app-input-dialog
