--- a/src/app/components/pages/admin/admin-pedidos/admin-pedidos.component.html
+++ b/src/app/components/pages/admin/admin-pedidos/admin-pedidos.component.html
@@ -27,7 +27,7 @@
         <td>{{ pedido.correo }}</td>
         <td>{{ pedido.direccion }}</td>
         <td>{{ pedido.telefono }}</td>
-        <td>{{ pedido.estado }}</td>
+        <td><app-badge [status]="pedido.estado"></app-badge></td>
         <td>{{ pedido.tipoPago || 'N/A' }}</td>
         <td>{{ pedido.total | currency:'USD':'symbol':'1.2-2' }}</td>
         <td>
@@ -56,7 +56,7 @@
         <div><strong>Correo:</strong> {{ pedido.correo }}</div>
         <div><strong>Dirección:</strong> {{ pedido.direccion }}</div>
         <div><strong>Teléfono:</strong> {{ pedido.telefono }}</div>
-        <div><strong>Estado Pago:</strong> {{ pedido.estado }}</div>
+        <div><strong>Estado Pago:</strong> <app-badge [status]="pedido.estado"></app-badge></div>
         <div><strong>Tipo Pago:</strong> {{ pedido.tipoPago || 'N/A' }}</div>
         <div><strong>Total:</strong> {{ pedido.total | currency:'USD':'symbol':'1.2-2' }}</div>
         <div class="acciones">
