--- a/src/app/components/pages/admin/admin-pedidos/admin-pedidos.component.html
+++ b/src/app/components/pages/admin/admin-pedidos/admin-pedidos.component.html
@@ -72,7 +72,7 @@
     </div>
   </ng-container>
 </div>
-<app-modal *ngIf="selectedPedido" [title]="'Voucher Pedido #' + (selectedPedido!.Id || selectedPedido!.id)" (close)="cerrarModal()">
+<ng-template #voucherContent>
   <ng-container *ngIf="voucherUrl">
     <img *ngIf="!voucherUrl.endsWith('.pdf')" [src]="voucherUrl" alt="Voucher" />
     <iframe *ngIf="voucherUrl.endsWith('.pdf')" [src]="voucherUrl" width="100%" height="500px"></iframe>
@@ -80,11 +80,33 @@
       <button class="btn btn-primary" (click)="descargarVoucher()">Descargar</button>
     </div>
   </ng-container>
+</ng-template>
+
+<app-modal *ngIf="selectedPedido && !isMobile" [title]="'Voucher Pedido #' + (selectedPedido!.Id || selectedPedido!.id)" (close)="cerrarModal()">
+  <ng-container *ngTemplateOutlet="voucherContent"></ng-container>
   <div modal-footer>
     <button class="btn btn-primary" (click)="validarPago()" [disabled]="processing">Validar Pago</button>
     <button class="btn btn-warn" (click)="rechazarPago()" [disabled]="processing">Rechazar Pago</button>
   </div>
 </app-modal>
+
+<div *ngIf="selectedPedido && isMobile" class="drawer-wrapper">
+  <div class="drawer open">
+    <header class="drawer-header">
+      <h3>Voucher Pedido #{{ selectedPedido!.Id || selectedPedido!.id }}</h3>
+      <button class="close-btn" (click)="cerrarModal()">✖</button>
+    </header>
+    <div class="drawer-body">
+      <ng-container *ngTemplateOutlet="voucherContent"></ng-container>
+    </div>
+    <div class="drawer-footer">
+      <button class="btn btn-primary" (click)="validarPago()" [disabled]="processing">Validar Pago</button>
+      <button class="btn btn-warn" (click)="rechazarPago()" [disabled]="processing">Rechazar Pago</button>
+    </div>
+  </div>
+  <div class="drawer-backdrop show" (click)="cerrarModal()"></div>
+</div>
+
 <app-input-dialog
   *ngIf="showReasonDialog"
   [message]="'Motivo de rechazo (opcional)'"
