Add breadcrumb navigation to detail view

--- a/src/app/components/detalle-cuento/detalle-cuento.component.html
+++ b/src/app/components/detalle-cuento/detalle-cuento.component.html
@@ -1,4 +1,9 @@
 <div class="detalle-pagina">
+  <nav class="breadcrumb">
+    <a routerLink="/home">Inicio</a> /
+    <a routerLink="/cuentos">Cuentos</a> /
+    <span>{{ cuento?.titulo }}</span>
+  </nav>
   <div class="detalle-grid">
     <div class="hero">
       <div class="badges">
