--- a/src/app/components/pages/admin/admin-pedidos/admin-pedidos.component.html
+++ b/src/app/components/pages/admin/admin-pedidos/admin-pedidos.component.html
@@ -104,7 +104,7 @@
       <button class="btn btn-warn" (click)="rechazarPago()" [disabled]="processing">Rechazar Pago</button>
     </div>
   </div>
-  <div class="drawer-backdrop show" (click)="cerrarModal()"></div>
+  <button class="drawer-backdrop show" (click)="cerrarModal()" aria-label="Cerrar modal"></button>
 </div>
 
 <app-input-dialog
