--- a/src/app/components/pages/voucher/voucher.component.html
+++ b/src/app/components/pages/voucher/voucher.component.html
@@ -37,5 +37,5 @@
       </button>
     </div>
   </div>
-  <div class="drawer-backdrop show" (click)="onClose()"></div>
+  <button class="drawer-backdrop show" (click)="onClose()" aria-label="Cerrar"></button>
 </div>
